Update job experience

--- a/index.html
+++ b/index.html
@@ -195,10 +195,9 @@
         <li>
           <div class="bullet">2018</div>
           <div class="content">
-            <h3>Spanish Translation Manager at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p><i>Previously Spanish Social Media and Program Coordinator</i></p>
-            <p>As the workload expanded, my friend and coworker Diana was in need of non-volunteer help, and she entrusted me with this new position. There began this incredible journey, where I learned and developed so many skills over the years. For the first few, I combined my job at this organization with my studies at University of Geneva, to harness everything it had to offer academically and hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!).</p>
-              <p>This was a part-time position that allowed me to have the flexibility that the freelancer life requires, while also giving me so much love, support and team work from my peers, who I got to collaborate with on a daily basis. I had the opportunity to work in so many areas beyond translation; from social media, to editing, marketing, PR and website management.</p>
+            <h3>Spanish Social Media and Program Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
+            <p>As the newly-founded Spanish department at NutritionFacts increased in responsibilities, they were looking to add someone else to the team, and they entrusted me with this new position. There began this incredible journey, where I learned and developed so many skills over the years. For the first few, I combined my job at this organization with my studies at University of Geneva, to harness everything it had to offer academically and hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!).</p>
+              <p>This position gave me so much love and support from my peers, who I got to collaborate with on a daily basis. I had the opportunity to work in so many areas beyond translation; from social media, to editing, marketing, PR and website management.</p>
             <p>Some of the things I was in charge of include, but are not limited to:</p>
             <ul class="bulleted">
               <li>Managing the translations of social media content using Asana</li>
@@ -210,7 +209,7 @@
               <li>Proofreading the bi-weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
               <li>Translating website strings and uploading content to WordPress</li>
             </ul>
-            <p>During my time at NutritionFacts, we grew the Spanish social media pages to 135 thousand followers on Instagram and 90 thousand on Facebook, and published and promoted several resources like an eating guide, a meal planning guide, numerous infographics and an email series.</p>
+            <p>During my time at NutritionFacts, we grew the Spanish social media pages from zero to 135,000 followers on Instagram and 90,000 on Facebook, and published and promoted several resources, including an eating guide, a meal planning guide, numerous infographics and an email series.</p>
             <p>FYI: Please beware that not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers. Furthermore, since I am no longer part of the team, I am not directly responsible for their current content.</p>
           </div>
         </li>
