Update NF experience

--- a/index.html
+++ b/index.html
@@ -189,28 +189,30 @@
             <h3>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
             <p>As a teenager, I learned that the Internet was a much bigger world if you spoke English. It was around that time that I discovered NutritionFacts and fell in love with their mission. As a non-profit organization, a lot of their translation work is done through volunteers, and I jumped on that bandwagon as soon as the opportunity presented itself.</p>
             <p>During this period, I translated subtitles using the now defunct Google Translator Toolkit and translated and edited transcripts on WordPress. It was around this time that NutritionFacts was getting ready to launch their Spanish website, where I was able to help with string translation. Not long after, they started their Spanish social media pages, which I was more than happy to lend a hand with as well.</p>
-            <p>That was the beginning of what would become my professional career, as it played a huge part in my decision to study translation and communication, something which I’m extremely grateful for.</p>
+            <p>That was the beginning of what would become my professional career, as it helped me decide what studies to pursue, something which I’m extremely grateful for.</p>
           </div>
         </li>
         <li>
           <div class="bullet">2018</div>
           <div class="content">
-            <h3>Spanish Social Media and Program Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>As the newly-founded Spanish department at NutritionFacts increased in responsibilities, they were looking to add someone else to the team, and they entrusted me with this new position. There began this incredible journey, where I learned and developed so many skills over the years. For the first few, I combined my job at this organization with my studies at University of Geneva, to harness everything it had to offer academically and hone my skills as a translator and communicator (because speaking English is most certainly not enough to be a translator!).</p>
-              <p>This position gave me so much love and support from my peers, who I got to collaborate with on a daily basis. I had the opportunity to work in so many areas beyond translation; from social media, to editing, marketing, PR and website management.</p>
-            <p>Some of the things I was in charge of include, but are not limited to:</p>
+            <h3>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
+            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management. Some of the things I was in charge of or collaborated on include:</p>
             <ul class="bulleted">
-              <li>Managing the translations of social media content using Asana</li>
-              <li>Executing the transcreation and copywriting for new campaigns in Spanish</li>
-              <li>Scheduling Spanish content using social media scheduling systems</li>
-              <li>Working with the team on analyzing Spanish SM metrics and brainstorming new ideas to reach our strategic planning goals</li>
-              <li>Translating and exporting Adobe graphics for use across platforms</li>
-              <li>Editing videos, recording Spanish voiceovers and creating Spanish captions</li>
-              <li>Proofreading the bi-weekly Spanish blog posts, as well as managing the volunteers involved in those translations</li>
-              <li>Translating website strings and uploading content to WordPress</li>
+              <li>Translate and edit social media content
+              <li>Manage projects and content with Asana
+              <li>Execute the transcreation and copywriting for new campaigns
+              <li>Schedule content using social media scheduling systems, such as Buffer, TikTok Studio and Later
+              <li>Analyze social media metrics
+              <li>Brainstorm with the team to reach strategic planning goals
+              <li>Translate and export Adobe graphics for use across platforms
+              <li>Edit videos, record Spanish voiceovers and create Spanish captions
+              <li>Translate website strings and upload content to WordPress
+              <li>Proofread biweekly Spanish blog posts
+              <li>Manage blog translation volunteers
+              <li>Review Spanish volunteer applications
             </ul>
             <p>During my time at NutritionFacts, we grew the Spanish social media pages from zero to 135,000 followers on Instagram and 90,000 on Facebook, and published and promoted several resources, including an eating guide, a meal planning guide, numerous infographics and an email series.</p>
-            <p>FYI: Please beware that not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers. Furthermore, since I am no longer part of the team, I am not directly responsible for their current content.</p>
+            <p>(Please beware that not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers, and content continues to be produced and edited after my departure.)</p>
           </div>
         </li>
       </ol>
