--- a/index.html
+++ b/index.html
@@ -196,20 +196,24 @@
           <div class="bullet">2018</div>
           <div class="content">
             <h3>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management. Some of the things I was in charge of or collaborated on include:</p>
+            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management. Some of the projects I was in charge of or collaborated on include:</p>
             <ul class="bulleted">
-              <li>Translate and edit social media content
-              <li>Manage projects and content with Asana
-              <li>Execute the transcreation and copywriting for new campaigns
-              <li>Schedule content using social media scheduling systems, such as Buffer, TikTok Studio and Later
-              <li>Analyze social media metrics
-              <li>Brainstorm with the team to reach strategic planning goals
-              <li>Translate and export Adobe graphics for use across platforms
-              <li>Edit videos, record Spanish voiceovers and create Spanish captions
-              <li>Translate website strings and upload content to WordPress
-              <li>Proofread biweekly Spanish blog posts
-              <li>Manage blog translation volunteers
-              <li>Review Spanish volunteer applications
+              <li>Translation and editing of social media content
+              <li>Project and content management with Asana
+              <li>Transcreation and copywriting for promotional and fundraising campaigns
+              <li>Social media content scheduling through platforms such as Buffer, TikTok Studio and Later
+              <li>Social media metric analysis to guide decision-making
+              <li>Team brainstorming to reach strategic planning goals
+              <li>Translation and exporting of Adobe graphics for use across platforms
+              <li>Video editing, Spanish voiceovers and Spanish captions
+              <li>Subtitling for long-form lectures and other key video material
+              <li>Internal initiatives to endorse content sensitive to food access, economic background and language and cultural barriers
+              <li>Website localization and content management in WordPress
+              <!-- <li>App localization -->
+              <li>Proofreading biweekly Spanish blog posts
+              <li>Volunteer management for blog translations
+              <!-- <li>Spanish volunteer applications review [standard raising, translation and selection] -->
+              <li>Launch and stewardship of an internal book club focused on cross-cultural sensitivity
             </ul>
             <p>During my time at NutritionFacts, we grew the Spanish social media pages from zero to 135,000 followers on Instagram and 90,000 on Facebook, and published and promoted several resources, including an eating guide, a meal planning guide, numerous infographics and an email series.</p>
             <p>(Please beware that not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers, and content continues to be produced and edited after my departure.)</p>
