Update NF job experience

--- a/index.html
+++ b/index.html
@@ -196,23 +196,23 @@
           <div class="bullet">2018</div>
           <div class="content">
             <h3>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management. Some of the projects I was in charge of or collaborated on include:</p>
+            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management. Some of the projects and tasks I was in charge of or collaborated on include:</p>
             <ul class="bulleted">
               <li>Translation and editing of social media content
-              <li>Project and content management with Asana
               <li>Transcreation and copywriting for promotional and fundraising campaigns
-              <li>Social media content scheduling through platforms such as Buffer, TikTok Studio and Later
               <li>Social media metric analysis to guide decision-making
-              <li>Team brainstorming to reach strategic planning goals
-              <li>Translation and exporting of Adobe graphics for use across platforms
+              <li>Social media content scheduling through platforms such as Buffer, TikTok Studio and Later
+              <li>Website localization and content management in WordPress
+              <li>Localization for Dr. Greger’s Daily Dozen, a habit-tracking app for Android and iOS
               <li>Video editing, Spanish voiceovers and Spanish captions
               <li>Subtitling for long-form lectures and other key video material
+              <li>Adapt graphic material to Spanish for use across online platforms
+              <li>Cross-team project management with Asana
+              <li>Selection of Spanish translation volunteers, with direct impact on output quality
+              <li>Management of a small team of volunteers for blog post translations
+              <li>Proofreading of biweekly Spanish blog posts
+              <li>Team brainstorming to reach strategic planning goals
               <li>Internal initiatives to endorse content sensitive to food access, economic background and language and cultural barriers
-              <li>Website localization and content management in WordPress
-              <!-- <li>App localization -->
-              <li>Proofreading biweekly Spanish blog posts
-              <li>Volunteer management for blog translations
-              <!-- <li>Spanish volunteer applications review [standard raising, translation and selection] -->
               <li>Launch and stewardship of an internal book club focused on cross-cultural sensitivity
             </ul>
             <p>During my time at NutritionFacts, we grew the Spanish social media pages from zero to 135,000 followers on Instagram and 90,000 on Facebook, and published and promoted several resources, including an eating guide, a meal planning guide, numerous infographics and an email series.</p>
