--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <li>Management of a small team of volunteers for blog post translations
               <li>Proofreading of biweekly Spanish blog posts
               <li>Team brainstorming to reach strategic planning goals
-              <li>Internal initiatives to endorse content sensitive to food access, economic background and language and cultural barriers
+              <li>Internal initiatives towards content sensitive to food access, economic background and cultural barriers
               <li>Launch and stewardship of an internal book club focused on cross-cultural sensitivity
             </ul>
             <p>During my time at NutritionFacts, we grew the Spanish social media pages from zero to 135,000 followers on Instagram and 90,000 on Facebook, and published and promoted several resources, including an eating guide, a meal planning guide, numerous infographics and an email series.</p>
