Wrap up NF job experience

--- a/index.html
+++ b/index.html
@@ -196,11 +196,13 @@
           <div class="bullet">2018</div>
           <div class="content">
             <h3>Spanish Translation Manager and Social Media Coordinator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management. Some of the projects and tasks I was in charge of or collaborated on include:</p>
+            <p>As the newly-founded Spanish department at NutritionFacts took on more projects, they entrusted me with a staff position. For the first few years, I combined my work there with my studies at University of Geneva, which allowed me to put theory into practice, honing my skills as a translator and communicator. Throughout my extended chapter at the organization, I had the opportunity to work in numerous areas and expand my expertise beyond translation; from social media, to editing, marketing, public relations and website management.</p>
+            <p>Some of the projects and tasks I was in charge of or collaborated on include:</p>
             <ul class="bulleted">
               <li>Translation and editing of social media content
               <li>Transcreation and copywriting for promotional and fundraising campaigns
-              <li>Social media metric analysis to guide decision-making
+              <li>Localization of educational resources, including healthy eating guides, infographics and email series
+              <li>Metric analysis to track reach and engagement, helping establish a combined social media presence of&nbsp;225,000+ followers from the ground up
               <li>Social media content scheduling through platforms such as Buffer, TikTok Studio and Later
               <li>Website localization and content management in WordPress
               <li>Localization for Dr. Greger’s Daily Dozen, a habit-tracking app for Android and iOS
@@ -215,8 +217,7 @@
               <li>Internal initiatives towards content sensitive to food access, economic background and cultural barriers
               <li>Launch and stewardship of an internal book club focused on cross-cultural sensitivity
             </ul>
-            <p>During my time at NutritionFacts, we grew the Spanish social media pages from zero to 135,000 followers on Instagram and 90,000 on Facebook, and published and promoted several resources, including an eating guide, a meal planning guide, numerous infographics and an email series.</p>
-            <p>(Please beware that not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers, and content continues to be produced and edited after my departure.)</p>
+            <p style="color: gray">Disclaimer: Not all content seen in NutritionFacts’ platforms was translated or edited by me; this includes social media. A high number of translations were done by volunteers, and content continues to be produced and edited after my departure.</p>
           </div>
         </li>
       </ol>
