--- a/index.html
+++ b/index.html
@@ -455,19 +455,28 @@
           <div class="bullet">2018</div>
           <div class="content">
             <h3>Coordinadora de la traducción al español y las redes sociales para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
-            <p>Como las responsabilidades del departamento de español de NutritionFacts no paraban de aumentar, mi compañera y amiga Diana necesitaba añadir a alguien al equipo, y decidió contar conmigo para ese nuevo puesto. Y así empezó esta gran etapa de mi vida, en la que he aprendido muchísimo con el paso de los años, ya que se me ha dado la libertad de probar muchas cosas nuevas. Al mismo tiempo, estuve aprovechando todo lo que la Universidad de Ginebra me ofrecía en mis estudios universitarios, para formarme oficialmente como traductora y comunicadora (porque quien diga que con saber inglés ya llega está peor que loco).</p>
-            <p>Pero no habría sido lo mismo sin NF. Con ellos aprendí (y aprendo) lecciones que la universidad no te enseña. Es un puesto a tiempo parcial, que me permitió la flexibilidad de estudiar mientras trabajaba, además de ofrecerme la libertad de trabajar en otros proyectos; algo básico para un traductor y transcreador autónomo. Sin embargo, tengo el privilegio de recibir el amor y apoyo de compañeros con los que trabajo a diario por una causa en la que creo y para una organización que siempre me ha encantado. Soy un poco todoterreno, así que dirijo las redes hispanohablantes, a algunos voluntarios y revisiones, el blog y cualquier campaña o cosilla que se me presente.</p>
-            <p>Esta es una lista no exhaustiva de mis responsabilidades:</p>
+            <p>Cuando las responsabilidades del nuevo departamento de español de NutritionFacts aumentaron, confiaron en mí para ocupar un nuevo puesto en plantilla. Durante los primeros años, junté este trabajo con mis estudios en la Universidad de Ginebra, y esto me permitió poner en práctica lo aprendido y pulir mis habilidades como traductora y comunicadora. A lo largo de toda mi etapa en esta organización, tuve la oportunidad de trabajar en una gran variedad de áreas y expandir mis conocimentos más allá de la traducción; desde las redes sociales, hasta la edición, el <i>marketing</i>, las relaciones públicas y la gestión de páginas web.</p>
+            <p>Estos son algunos de los proyectos o tareas para los que era responsable o colaboradora:</p>
             <ul class="bulleted">
-              <li><i>Community Manager</i> para las redes sociales en español.</li>
-              <li>Creación y gestión de contenidos en equipo.</li>
-              <li><i>Copywriting</i>, traducción y revisión sobre nutrición y salud.</li>
-              <li>Seguimiento e interpretación mensual y semanal de las métricas, además de planificación estratégica en equipo.</li>
-              <li>Traducción de contenido gráfico con Adobe Creative Cloud.</li>
-              <li>Gestión de un pequeño equipo de traductores voluntarios para el blog.</li>
-              <li>Revisión de las solicitudes de voluntariado.</li>
+              <li>Traducción y edición de contenido para redes sociales
+              <li>Transcreación y <i>copywriting</i> para campañas promocionales y recaudaciones de fondos
+              <li>Localización de recursos divulgativos, como guías de nutrición saludable, infografías y cursos por correo electrónico.
+              <li>Análisis de métricas para medir el alcance y la participación del público, y conseguir así establecer una presencia en redes de más de 225&nnbsp;000 seguidores desde cero
+              <li>Programación del calendario de redes con plataformas como Buffer, TikTok Studio y Later
+              <li>Localización de la página web y gestión de contenidos en WordPress
+              <li>Localización de la aplicación móvil "La Docena Diaria del Dr. Greger" para Android y iOS
+              <li>Edición de vídeo, grabación de voz en off y creación de subtítulos
+              <li>Traducción de subtítulos para charlas y otros materiales clave
+              <li>Adaptación de material gráfico para su uso en distintas plataformas
+              <li>Gestión de proyectos interdisciplinarios con Asana
+              <li>Selección de traductores voluntarios de español, con impacto directo en la calidad de los textos
+              <li>Gestión de un pequeño equipo de voluntarios para traducciones de artículos de blog
+              <li>Revisión y corrección de artículos de blog
+              <li>Sesiones en equipo para sacar ideas que permitan alcanzar las metas de la planificación estratégica
+              <li>Participación en iniciativas internas para promover contenido con sensibilidad hacia los problemas de acceso a comida, situación econónima y barreras culturales
+              <li>Creación y tutela de un club de lectura enfocado en sensibilización multicultural 
             </ul>
-            <p>FYI: Ten en cuenta que no he traducido ni revisado todo el contenido que aparece en las numerosas plataformas de NutritionFacts.org, y esto incluye también las redes sociales. Una cantidad enorme del contenido ha sido traducido por voluntarios que no estaban a mi cargo. Además, como ya no formo parte del equipo, no me hago responsable de su contenido actual.</p>
+            <p>Advertencia: No he traducido ni revisado todo el contenido que aparece en las numerosas plataformas de NutritionFacts.org, y esto incluye las redes sociales. Una gran cantidad de las traducciones son de voluntarios que no estaban a mi cargo, y se sigue produciendo y editando contenido tras mi partida.</p>
           </div>
         </li>
       </ol>
