Add missing course. Tweak course titles

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <path d="M 20 20 L 20 80" />
           </svg>
           <div class="content">
-            <h3>Course in romantic and erotic translation EN - ES</h3>
+            <h3>Romantic and erotic translation EN–ES</h3>
             <h4>AulaSIC</h4>
           </div>
         </li>
@@ -159,14 +159,24 @@
             <path d="M 20 20 L 20 80" />
           </svg>
           <div class="content">
-            <h3>Punctuation and orthography course by RAE</h3>
-            <h4>Cursiva</h4>
+            <h3>Punctuation and orthography</h3>
+            <h4>Cursiva (RAE)</h4>
+          </div>
+        </li>
+        <li>
+          <div class="bullet">2021</div>
+          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
+            <path d="M 20 20 L 20 80" />
+          </svg>
+          <div class="content">
+            <h3>Subtitling and audiovisual translation</h3>
+            <h4>AulaSIC</h4>
           </div>
         </li>
         <li>
           <div class="bullet">2021</div>
           <div class="content">
-            <h3>Subtitling and audiovisual translation</h3>
+            <h3>Children and young adult literary translation EN–ES</h3>
             <h4>AulaSIC</h4>
           </div>
         </li>
@@ -384,7 +394,7 @@
             <path d="M 20 20 L 20 80" />
           </svg>
           <div class="content">
-            <h3>Curso en traducción romántica y erótica</h3>
+            <h3>Traducción romántica y erótica EN–ES</h3>
             <h4>AulaSIC</h4>
           </div>
         </li>
@@ -400,8 +410,18 @@
         </li>
         <li>
           <div class="bullet">2021</div>
+          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
+            <path d="M 20 20 L 20 80" />
+          </svg>
           <div class="content">
-            <h3>Traducción audiovisual: Subtitulado</h3>
+            <h3>Traducción audiovisual: subtitulado</h3>
+            <h4>AulaSIC</h4>
+          </div>
+        </li>
+        <li>
+          <div class="bullet">2021</div>
+          <div class="content">
+            <h3>Traducción de literatura infantil y juvenil EN–ES</h3>
             <h4>AulaSIC</h4>
           </div>
         </li>
