--- a/index.html
+++ b/index.html
@@ -57,27 +57,15 @@
       <h2>These are some of the <strong>tools</strong> I’ve used <span class="emoji">🛠</span></h2>
       <ul class="tools-list">
         <li>
-          <a target="_blank" href="https://adobe.com/products/photoshop.html">
-            <img height="22" alt="Adobe Photoshop’s logo" src="photoshop-logo.svg">
-            Photoshop
+          <a target="_blank" href="https://memoq.com">
+            <img height="24" alt="memoQ’s logo" src="memoq-logo.svg">
+            memoQ
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://adobe.com/products/indesign.html">
-            <img height="22" alt="Adobe InDesign’s logo" src="indesign-logo.svg">
-            InDesign
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://adobe.com/products/illustrator.html">
-            <img height="22" alt="Adobe Illustrator’s logo" src="illustrator-logo.svg">
-            Illustrator
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://www.adobe.com/products/premiere.html">
-            <img height="22" alt="Adobe Premiere Pro’s logo" src="adobe-premiere -pro-logo.svg">
-            Premiere Pro
+          <a target="_blank" href="https://trados.com">
+            <img height="24" alt="Trados’ logo" src="trados-logo.svg">
+            Trados
           </a>
         </li>
         <li>
@@ -87,21 +75,71 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://wordpress.org">
+            <img height="22" alt="WordPress’s logo" src="wordpress-logo.svg">
+            WordPress
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://amara.org">
+            <img height="22" alt="Amara Subtitling’s logo" src="amara-logo.svg">
+            Amara Subtitling
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://subworkshop.sourceforge.net">
+            <img height="22" alt="Subtitle Workshop’s logo" src="subtitle-workshop-logo.png">
+            Subtitle Workshop
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://buffer.com">
             <img height="22" alt="Buffer’s logo" src="buffer-logo.svg">
             Buffer
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://facebook.com/creatorstudio">
-            <img height="22" alt="Facebook Creator Studio’s logo" class="creator-studio-logo" src="creator-studio-logo.png">
-            Creator Studio
+          <a target="_blank" href="https://later.com">
+            <img height="22" alt="Later’s logo" src="later-logo.svg">
+            Later
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://memoq.com">
-            <img height="24" alt="memoQ’s logo" src="memoq-logo.svg">
-            memoQ
+          <a target="_blank" href="https://tiktok.com/tiktokstudio">
+            <img height="22" class="rounded-logo" alt="TikTok Studio’s logo" src="tiktok-studio-logo.png">
+            TikTok Studio
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://facebook.com/business/tools/meta-business-suite">
+            <img height="22" class="rounded-logo" alt="Meta Business Suite’s logo" src="meta-business-suite-logo.png">
+            Meta Business Suite
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://adobe.com/products/indesign.html">
+            <img height="22" alt="Adobe InDesign’s logo" src="indesign-logo.svg">
+            InDesign
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://adobe.com/products/photoshop.html">
+            <img height="22" alt="Adobe Photoshop’s logo" src="photoshop-logo.svg">
+            Photoshop
+          </a>
+        </li>
+        <!--
+        <li>
+          <a target="_blank" href="https://adobe.com/products/illustrator.html">
+            <img height="22" alt="Adobe Illustrator’s logo" src="illustrator-logo.svg">
+            Illustrator
+          </a>
+        </li>
+        -->
+        <li>
+          <a target="_blank" href="https://adobe.com/products/premiere.html">
+            <img height="22" alt="Adobe Premiere Pro’s logo" src="adobe-premiere -pro-logo.svg">
+            Premiere Pro
           </a>
         </li>
       </ul>
@@ -302,27 +340,15 @@
       <h2>Estas son algunas de las <strong>herramientas</strong> que he usado para mi trabajo <span class="emoji">🛠</span></h2>
       <ul class="tools-list">
         <li>
-          <a target="_blank" href="https://adobe.com/products/photoshop.html">
-            <img height="22" alt="Adobe Photoshop’s logo" src="photoshop-logo.svg">
-            Photoshop
+          <a target="_blank" href="https://memoq.com">
+            <img height="24" alt="memoQ’s logo" src="memoq-logo.svg">
+            memoQ
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://adobe.com/products/indesign.html">
-            <img height="22" alt="Adobe InDesign’s logo" src="indesign-logo.svg">
-            InDesign
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://adobe.com/products/illustrator.html">
-            <img height="22" alt="Adobe Illustrator’s logo" src="illustrator-logo.svg">
-            Illustrator
-          </a>
-        </li>
-        <li>
-          <a target="_blank" href="https://www.adobe.com/products/premiere.html">
-            <img height="22" alt="Adobe Premiere Pro’s logo" src="adobe-premiere -pro-logo.svg">
-            Premiere Pro
+          <a target="_blank" href="https://trados.com">
+            <img height="24" alt="Trados’ logo" src="trados-logo.svg">
+            Trados
           </a>
         </li>
         <li>
@@ -332,21 +358,71 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://wordpress.org">
+            <img height="22" alt="WordPress’s logo" src="wordpress-logo.svg">
+            WordPress
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://amara.org">
+            <img height="22" alt="Amara Subtitling’s logo" src="amara-logo.svg">
+            Amara Subtitling
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://subworkshop.sourceforge.net">
+            <img height="22" alt="Subtitle Workshop’s logo" src="subtitle-workshop-logo.png">
+            Subtitle Workshop
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://buffer.com">
             <img height="22" alt="Buffer’s logo" src="buffer-logo.svg">
             Buffer
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://facebook.com/creatorstudio">
-            <img height="22" alt="Facebook Creator Studio’s logo" class="creator-studio-logo" src="creator-studio-logo.png">
-            Creator Studio
+          <a target="_blank" href="https://later.com">
+            <img height="22" alt="Later’s logo" src="later-logo.svg">
+            Later
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://memoq.com">
-            <img height="24" alt="memoQ’s logo" src="memoq-logo.svg">
-            memoQ
+          <a target="_blank" href="https://tiktok.com/tiktokstudio">
+            <img height="22" class="rounded-logo" alt="TikTok Studio’s logo" src="tiktok-studio-logo.png">
+            TikTok Studio
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://facebook.com/business/tools/meta-business-suite">
+            <img height="22" class="rounded-logo" alt="Meta Business Suite’s logo" src="meta-business-suite-logo.png">
+            Meta Business Suite
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://adobe.com/products/indesign.html">
+            <img height="22" alt="Adobe InDesign’s logo" src="indesign-logo.svg">
+            InDesign
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://adobe.com/products/photoshop.html">
+            <img height="22" alt="Adobe Photoshop’s logo" src="photoshop-logo.svg">
+            Photoshop
+          </a>
+        </li>
+        <!--
+        <li>
+          <a target="_blank" href="https://adobe.com/products/illustrator.html">
+            <img height="22" alt="Adobe Illustrator’s logo" src="illustrator-logo.svg">
+            Illustrator
+          </a>
+        </li>
+        -->
+        <li>
+          <a target="_blank" href="https://adobe.com/products/premiere.html">
+            <img height="22" alt="Adobe Premiere Pro’s logo" src="adobe-premiere -pro-logo.svg">
+            Premiere Pro
           </a>
         </li>
       </ul>
@@ -712,7 +788,7 @@
 
     .tools-list {
       display: grid;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 12px;
 
       li a {
@@ -739,19 +815,7 @@
       }
     }
 
-    @media (max-width: 750px) {
-      .tools-list { grid-template-columns: repeat(3, minmax(0, 1fr)) }
-    }
-
-    @media (max-width: 550px) {
-      .tools-list { grid-template-columns: repeat(2, minmax(0, 1fr)) }
-    }
-
-    @media (max-width: 370px) {
-      .tools-list { grid-template-columns: auto }
-    }
-
-    .creator-studio-logo { border-radius: 5px }
+    .rounded-logo { border-radius: 5px }
 
     .education-list {
       > li {
